# advent-of-code-rust

./: .pre-commit-config.yaml  Cargo.toml
benches/: benches.rs
cpu/: Cargo.toml
cpu/benches/: benches.rs
cpu/src/: bin.rs  lib.rs
cpu/src/twothousandfifteen/day1/: mod.rs
cpu/src/twothousandfifteen/day12/: mod.rs
cpu/src/twothousandfifteen/day14/: mod.rs
cpu/src/twothousandfifteen/day15/: mod.rs
cpu/src/twothousandfifteen/day19/: mod.rs
cpu/src/twothousandfifteen/day2/: mod.rs
cpu/src/twothousandfifteen/day20/: mod.rs
cpu/src/twothousandfifteen/day22/: mod.rs
cpu/src/twothousandfifteen/day24/: mod.rs
cpu/src/twothousandfifteen/day6/: mod.rs
cpu/src/twothousandfifteen/day7/: mod.rs
cpu/src/twothousandfifteen/day9/: mod.rs
cpu/src/twothousandsixteen/: mod.rs
cpu/src/twothousandsixteen/day11/: mod.rs
cpu/src/twothousandsixteen/day12/: mod.rs
cpu/src/twothousandsixteen/day17/: mod.rs
cpu/src/twothousandsixteen/day18/: mod.rs
cpu/src/twothousandsixteen/day2/: mod.rs
cpu/src/twothousandsixteen/day21/: mod.rs
cpu/src/twothousandsixteen/day25/: mod.rs
cpu/src/twothousandsixteen/day3/: mod.rs
cpu/src/twothousandsixteen/day4/: mod.rs
cpu/src/twothousandsixteen/day6/: mod.rs
cpu/src/twothousandsixteen/day7/: mod.rs
cpu/src/twothousandsixteen/day8/: mod.rs
cpu/src/twothousandsixteen/day9/: mod.rs
cpu/src/utils/: conway.rs  cuda_md5.rs  md5.rs  mod.rs  parsing.rs
cpu/src/utils/iterators/: pairs.rs
gpu/: Cargo.toml  build.rs
gpu/src/: lib.rs  md5.rs
inputs/: 2015-25.txt  2023-14.txt  2023-15.txt  2023-16.txt  2023-17.txt
src/: lib.rs  main.rs
src/twothousandfifteen/: mod.rs
src/twothousandsixteen/: mod.rs
src/utils/: combinatorials.rs  (+6 more)
(+86 files in other folders)
