[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoclib"
path = "src/lib.rs"

[[bin]]
name ="aoc"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
regex = "1.9.5"
serde = "1.0.188"
serde_json = "1.0.107"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
